tests/functional/lang/parse-fail-set.err.exp
error: undefined variable 'x'
       at /pwd/parse-fail-set.nix:1:3:
            1| 8.x
             |   ^
            2|
